Rewrites for lightmode

--- a/Components/Fader.razor
+++ b/Components/Fader.razor
@@ -16,7 +16,7 @@
     <div class="fader-root relative h-[350px] w-4" @ref="_rootRef">
 
         <!-- TRACK -->
-        <div class="absolute left-1/2 -translate-x-1/2 w-[4px] h-full bg-gray-950 rounded-full"></div>
+        <div class="absolute left-1/2 -translate-x-1/2 w-[4px] h-full bg-gray-300 dark:bg-gray-700 rounded-full"></div>
 
         <!-- RANGE -->
         <div class="fader-range absolute left-1/2 -translate-x-1/2 w-[4px] bg-primary rounded-full"
@@ -24,7 +24,7 @@
 
         <!-- THUMB -->
         <div class="fader-thumb absolute left-1/2 -translate-x-1/2 w-[12px] h-[12px] 
-                    bg-black border-2 border-primary rounded-full shadow 
+                    bg-white dark:bg-gray-800 border-2 border-primary rounded-full shadow 
                     translate-y-1/2"
              style="bottom:@ThumbBottomPercent%">
         </div>
