--- a/Components/MixerCard.razor
+++ b/Components/MixerCard.razor
@@ -6,8 +6,8 @@
 
     <div class="transition-opacity duration-300 flex gap-10 items-center w-full">
         <div class="grow">
-            <div class="font-medium text-gray-100">@MixerInfo.IpAddress</div>
-            <div class="text-xs text-gray-300 uppercase">@MixerInfo.MixerType</div>
+            <div class="font-medium dark:text-gray-100">@MixerInfo.IpAddress</div>
+            <div class="text-xs dark:text-gray-300 uppercase">@MixerInfo.MixerType</div>
         </div>
         <div class="items-center flex gap-1 text-primary">
             <i class="text-2xl fas fa-circle-play"></i>
