--- a/Components/Pages/Mix.razor
+++ b/Components/Pages/Mix.razor
@@ -24,11 +24,10 @@
     <div class="">
         <label for="" class="text-xs font-medium text-gray-500">Select mix</label>
         <div class="flex items-center gap-2">
-           <div class="w-3 h-3 rounded-full shrink-0"
+           <div class="size-6 rounded-sm shrink-0 border border-gray-200"
                 style="background-color:@Model.Busses.FirstOrNone(b => b.Index == SelectedOutput).Map(b => b.Color.HexOpaque).ValueOr("#ccc")"></div>
        
-           <select @bind="SelectedOutput"
-                   class="px-3 py-1.5 rounded border border-gray-300 bg-white dark:bg-gray-900 dark:border-gray-700 shadow-sm text-sm w-full grow">
+           <select @bind="SelectedOutput">
                <option value="0">Main LR</option>
                @foreach (var b in Model.Busses)
                {
@@ -54,10 +53,9 @@
                     <article class="flex flex-col items-center gap-1 p-1 rounded border border-gray-200 bg-gray-50 dark:bg-gray-900 dark:border-gray-800 hover:border-gray-300 transition-colors">
                         <button class="w-full relative group">
                             <div class="transition-opacity group-hover:opacity-90 mx-auto">
-                                <div class="w-9 h-9 rounded flex items-center justify-center border" 
-                                     style="border-color: @ch.Color.Map(c => c.HexOpaque).ValueOr("#ccc"); color: @ch.Color.Map(c => c.HexOpaque).ValueOr("#ccc");
-                                     background-color: @ch.Color.Map(c => c.HexTransparent).ValueOr("#ccc");">
-                                    <i class="fad @ch.Icon.Map(i => i.ToString()).ValueOr("")"></i>
+                                <div class="size-9 rounded flex items-center justify-center border border-gray-400 text-gray-800 dark:border-none" 
+                                     style="background-color: @ch.Color.Map(c => c.HexOpaque).ValueOr("#ccc");">
+                                    <i class="fal @ch.Icon.Map(i => i.ToString()).ValueOr("")"></i>
                                 </div>
                             </div>
                         </button>
@@ -76,7 +74,7 @@
                         
                                     @(ch.Muted
                                         ? "bg-primary/30 border-primary text-primary"
-                                        : "bg-gray-800 border-gray-700 text-gray-400")
+                                        : "border-gray-300 bg-gray-200 text-gray-500 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400")
                                 ">
                             <i class="@(ch.Muted ? "fad fa-volume-xmark" : "fad fa-volume-high")"></i>
                         </button>
