--- a/Assets/tailwind/input.css
+++ b/Assets/tailwind/input.css
@@ -17,3 +17,10 @@
 h1, h2, h3 {
     @apply font-manrope;
 }
+
+input[type="text"], select {
+    @apply w-full border px-2.5 py-1.5 rounded border-gray-300 bg-white text-gray-900 dark:border-gray-700 dark:bg-gray-800 dark:text-gray-200 outline-0
+}
+input[type="text"]:focus, select:focus {
+    @apply border-primary ring-2 ring-primary/50
+}
